Add files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ udemy_courses.csv
 
 # pdf files
 FinalProject.pdf
+
+# notebooks
+1SA Final Project Airbnb.ipynb
+1SA Final Project US Superstore.ipynb
