Add file to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ FinalProject.pdf
 # notebooks
 1SA Final Project Airbnb.ipynb
 1SA Final Project US Superstore.ipynb
+1SA Final Project Hotel Bookings.ipynb
